# FixMyQuarter

./: .gitignore  README.md
distributed-storage-system/: .env  Makefile  README.md  arbo.txt  docker-compose.yml  requirements.txt  test.db
distributed-storage-system-ICTU/: Makefile  README.md  docker-compose.yml
distributed-storage-system-ICTU/backend/: .env  Dockerfile  alembic.ini  (+1 more)
distributed-storage-system/backend/: alembic.ini  pyproject.toml  test.db
distributed-storage-system/backend/app/: config.py  node_pb2.py  node_pb2_grpc.py
distributed-storage-system/backend/app/node_code/: __init__.py  agent.py  commands.py  protocol.py  shell.py  storage.py
distributed-storage-system/backend/app/orchestrator/: __init__.py  cgroups.py  daemon.py  ipc_server.py  monitor.py  namespaces.py  network.py  orchestrator.py
distributed-storage-system/backend/app/services/: node_service.py
distributed-storage-system/backend/app/storage_logic/: __init__.py  chunker.py  healing.py  integrity.py  placement.py  replication.py
distributed-storage-system/backend/app/webapp/: __init__.py  dependencies.py  ipc_client.py  main.py  security.py
distributed-storage-system/backend/app/webapp/database/: db.py  models.py  schemas.py
distributed-storage-system/backend/app/webapp/routers/: auth.py  files.py  monitoring.py  nodes.py  websocket.py
distributed-storage-system/backend/app/workers/: __init__.py  celery_app.py  tasks.py
distributed-storage-system/backend/gateway/routers/: nodes.py
distributed-storage-system/backend/scripts/: init_db.py
infra/: setup_network.sh
(+249 files in other folders)
