[project]
name = "distributed-storage-system"
version = "0.1.0"
description = "A distributed object storage system with custom container engine"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "pydantic==2.6.0",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "psutil==5.9.8",
    "aiofiles==23.2.1",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "httpx==0.26.0",
    "celery==5.3.6",
    "redis==5.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
python_files = "test_*.py"
filterwarnings = [
    "ignore::DeprecationWarning",
]